filter qo'shildi, admin va user pagelari alohida qilindi, basket sessionga saqlandi